--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body class="">
 
-	<div class="container-fullwidth ">
+	<div class="container-fullwidth">
 		<!-- Header + Navbar -->
 		<header class="row ">
 			<nav class="nav_bar col-12">
@@ -134,38 +134,39 @@
 		</div>
 
 		<!-- TARJETAS -->
-		<div class="row m-4">
+		<div class="row ">
   			<div class="col-lg-4 col-12">
-  				<div class="card" data-aos="fade-right">
+  				<div class="tarjeta" data-aos="fade-right" >
   					<i class="fa-solid fa-percent card-icon"></i>
-  					<div class="card-body">
-  						<h5 class="card-title text-center">Promociones</h5>
-  						<p class="card-text">Hasta 20% de Descuento para estudiantes y familias numerosas. Disfruta del mayor sabor al menor precio. Pregunta en tu tienda más cercana para más información</p>
+  					<div class="tarjeta-body">
+  						<h5 class=" text-center">Promociones</h5>
+  						<p class="text-justify">Hasta 20% de Descuento para estudiantes y familias numerosas. Disfruta del mayor sabor al menor precio. Pregunta en tu tienda más cercana.</p>
   					</div>
   				</div>
   			</div>
   			<div class="col-lg-4 col-12">
-  				<div class="card" data-aos="fade-down">
+  				<div class="tarjeta" data-aos="fade-up" >
   					<i class="fa-solid fa-calendar card-icon"></i>
 
-  					<div class="card-body">
+  					<div class="tarjeta-body">
   						<h5 class="card-title text-center">Eventos</h5>
   						<p class="card-text">No te pierdas nuestros eventos, desde ceremonia del té a karaoke improvisado. ¡Síguenos en redes para no perderte ninguno!</p>
   					</div>
   				</div>
   			</div>
   			<div class="col-lg-4 col-12">
-  				<div class="card" data-aos="fade-left">
+  				<div class="tarjeta" data-aos="fade-left">
   					<i class="fa-solid fa-gift card-icon"></i>
-  					<div class="card-body">
-  						<h5 class="card-title text-center">Tarjeta Regalo</h5>
-  						<p class="card-text">Regala experiencias y sabor con Kero Tea. Pregunta en tienda para personalizar la tuya y sorprender a los tuyos. Sabores únicos para personas únicas</p>
+  					<div class="tarjeta-body">
+  						<h5 class="text-center">Tarjeta Regalo</h5>
+  						<p class="">Regala experiencias y sabor con Kero Tea. Pregunta en tienda para personalizar la tuya y sorprender a los tuyos. </p>
   					</div>
   				</div>
   			</div>
   		</div>
+
   		<!-- FOOTER -->
-  		<footer class="container-fullwidth footer">
+  		<footer class="container-fullwidth footer p-3">
 			<div class="row justify-content-center">
 
 
