Entrega final final

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   				<div class="tarjeta" data-aos="fade-right" >
   					<i class="fa-solid fa-percent card-icon"></i>
   					<div class="tarjeta-body">
-  						<h5 class=" text-center">Promociones</h5>
+  						<h5 class="tarjeta-title text-center">Promociones</h5>
   						<p class="text-justify">Hasta 20% de Descuento para estudiantes y familias numerosas. Disfruta del mayor sabor al menor precio. Pregunta en tu tienda más cercana.</p>
   					</div>
   				</div>
@@ -149,8 +149,8 @@
   					<i class="fa-solid fa-calendar card-icon"></i>
 
   					<div class="tarjeta-body">
-  						<h5 class="card-title text-center">Eventos</h5>
-  						<p class="card-text">No te pierdas nuestros eventos, desde ceremonia del té a karaoke improvisado. ¡Síguenos en redes para no perderte ninguno!</p>
+  						<h5 class="tarjeta-title text-center">Eventos</h5>
+  						<p class="">No te pierdas nuestros eventos, desde ceremonia del té a karaoke improvisado. ¡Síguenos en redes para no perderte ninguno y disfrutar con nosotros!</p>
   					</div>
   				</div>
   			</div>
@@ -158,8 +158,8 @@
   				<div class="tarjeta" data-aos="fade-left">
   					<i class="fa-solid fa-gift card-icon"></i>
   					<div class="tarjeta-body">
-  						<h5 class="text-center">Tarjeta Regalo</h5>
-  						<p class="">Regala experiencias y sabor con Kero Tea. Pregunta en tienda para personalizar la tuya y sorprender a los tuyos. </p>
+  						<h5 class="tarjeta-title text-center">Tarjeta Regalo</h5>
+  						<p class="">Regala experiencias y sabor con Kero Tea. Pregunta en tienda para personalizar la tuya y sorprender a los tuyos. Regala una experiencia única. </p>
   					</div>
   				</div>
   			</div>
