Enlace rotos arreglados

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		         			<div class="carousel-caption text-end">
 		            			<h2 style="color: #FFFFFF;">Siempre cerca de ti</h2>
 		           				<h4>Encuentra tu Kero Tea más cercano</h4>
-		            			<p><a class="btn btn-lg CTA_slider" href="views/carta.html">Descubrir</a></p>
+		            			<p><a class="btn btn-lg CTA_slider" href="views/tiendas.html">Descubrir</a></p>
 		          			</div>
 		        		</div>
 		      		</div>
@@ -112,7 +112,7 @@
 		         			<div class="carousel-caption text-end">
 		           				<h2 style="color: #FFFFFF;">¿Quiénes somos?</h1>
 		            			<h4>Conoce nuestro equipo y nuestra historia</h4>
-		           				<p><a class="btn btn-lg CTA_slider" href="historia.html">Conócenos</a></p>
+		           				<p><a class="btn btn-lg CTA_slider" href="views/historia.html">Conócenos</a></p>
 		          			</div>
 		      			</div>
 		      		</div>
@@ -133,7 +133,7 @@
 
 		</div>
 
-		<!-- TARJETAS -->
+		<!-- TARJETAS PROMOCIONALES-->
 		<div class="row ">
   			<div class="col-lg-4 col-12">
   				<div class="tarjeta" data-aos="fade-right" >
