Entrega final slider responsive mejorado

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		        		</div>
 
 		        		<div class="container">
-		         			<div class="carousel-caption text-end">
+		         			<div class="carousel-caption caption-slider">
 		            			<h2 style="color: #FFFFFF;">Siempre cerca de ti</h2>
 		           				<h4>Encuentra tu Kero Tea más cercano</h4>
 		            			<p><a class="btn btn-lg CTA_slider" href="views/tiendas.html">Descubrir</a></p>
@@ -97,7 +97,7 @@
 			        	</div>
 
 			        	<div class="container">
-			         		<div class="carousel-caption text-end">
+			         		<div class="carousel-caption caption-slider">
 			            		<h2 style="color: #FFFFFF;">Toppings</h1>
 			           			<h4>Ahora combina nuevos sabores</h4>
 			            		<p><a class="btn btn-lg CTA_slider" href="views/carta.html">Descubrir</a></p>
@@ -109,7 +109,7 @@
 		       			<img src="assets/img/slider_3.jpg" class="img-slider">
 
 		        		<div class="container">
-		         			<div class="carousel-caption text-end">
+		         			<div class="carousel-caption caption-slider">
 		           				<h2 style="color: #FFFFFF;">¿Quiénes somos?</h1>
 		            			<h4>Conoce nuestro equipo y nuestra historia</h4>
 		           				<p><a class="btn btn-lg CTA_slider" href="views/historia.html">Conócenos</a></p>
