--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<!-- SEO -->	
 	<meta name="description" content="Tetería de Bubble Tea y dulces asiáticos">
-	<meta name="keywords" content="Bubble Tea, Tapioca, Comida asiática, Postres Asiáticos,Cafetería,Tetería,Dulces">
+	<meta name="keywords" content="Bubble Tea, Tapioca, Comida asiática, Postres Asiáticos,Cafetería,Tetería,Dulces,Boba Tea">
   	<meta name="author" content="Lara Monteagudo">
 
 	<!-- ICONOS SVG FONT AWESOME -->
